fix css align + hardcoded colours

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,30 +4,54 @@
     --heading-1: #e0e0e0;
     --heading-2: #c0c0c0;
     --heading-3: #a0a0a0;
-    --text: #d0ffff;
-    --background: #303030;
+    --text-1: #d0ffff;
+    --text-2: #eeffff;
+    --accent-1: #6090c0;
+    --accent-2: #cccccc;
+    --background-1: #303030;
+    --background-2: #505050;
     --headerfooter: #35424a;
     --button: #355575;
-    --button-hover: #45a049;
+    --button-hover: #45a0a0;
 }
 
 html {
-    max-width: 80ch;
+    display: flex;
+    justify-content: center;
 }
 
 body {
+    width: 80ch;
+    align-self: center;
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: var(--background);
-    color: var(--text);
+    background-color: var(--background-1);
+    color: var(--text-1);
 }
 
 header {
     background: var(--headerfooter);
     color: var(--heading-1);
     padding: 20px 0;
+}
+
+#header-leftside {
     text-align: center;
+    margin-left: 10%;
+    width: 70%;
+}
+
+#header-rightside {
+    float: right;
+    position: relative;
+    width: 20%;
+    right: -5%;
+    top: -40px;
+    padding-left: 15%;
+}
+
+img {
+    max-width: 40px;
+    max-height: 40px;
 }
 
 h1 {
@@ -52,10 +76,6 @@ section > *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
     padding-left: 2em;
 }
 
-section {
-    padding-bottom: 4rem;
-}
-
 .container {
     width: 80%;
     margin: auto;
@@ -71,15 +91,15 @@ input[type="text"] {
     width: 40ch;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid var(--accent-2);
     border-radius: 4px;
     font-family: 'Courier New', Courier, monospace;
     text-transform: uppercase;
 }
 
 button {
-    background: #355575;
-    color: #ffffff;
+    background: var(--button);
+    color: var(--text-2);
     border: none;
     padding: 8px 15px;
     cursor: pointer;
@@ -87,7 +107,7 @@ button {
 }
 
 button:hover {
-    background: #45a049;
+    background: var(--button-hover);
 }
 
 .results {
@@ -95,8 +115,8 @@ button:hover {
 }
 
 .result-item {
-    background: #ffffff;
-    border: 1px solid #ccc;
+    background: var(--background-2);
+    border: 1px solid var(--accent-2);
     padding: 10px;
     margin: 5px 0;
     border-radius: 4px;
@@ -108,7 +128,7 @@ pre {
 
 footer {
     background: #35424a;
-    color: #ffffff;
+    color: var(--text-2);
     text-align: center;
     padding: 10px 0;
     position: fixed;
